fix usn search and update marks

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -179,9 +179,9 @@
 
                 </div>
 
-                <% if(typeof message!= "undefined" && message) { %>
+                <% if(typeof stumessage!= "undefined" && stumessage) { %>
                     <h4 class="alert alert-success mt-4">
-                        <%= message %>
+                        <%= stumessage %>
                     </h4>
                     <% } %>
 
