--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <!-- <script src="../public/js/in.js" defer></script> -->
+    <!-- <script src="/js/in.js" defer></script> -->
 
     <title>Assignment portal</title>
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark  justify-content-between" style="margin-bottom: 2%; padding: 15px;">
@@ -33,27 +33,29 @@
     </nav>
 </head>
 
-<body>
+<body style="background-color: #DFFFF4;">
 
-    <div class="container">
+    <div class="container-sm">
 
 
-        <div class="jumbotron">
-            <div class="container-sm">
+
+        <div class="container-sm" style="width: 720px;">
+            <div class="jumbotron" style="border: 1px solid black;">
                 <h4 class="display-4 text-center" style="margin-bottom: 3%;">Update Student Marks</h4>
 
                 <form action="/auth/search" method="POST">
-                    <h3 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Search By USN</span></h3>
+                    <h2 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark mt-4">Search By USN</span></h2>
+                    <img style="width: 300px;" class="img-fluid mx-auto d-block mb-5" src="/img/search.svg" alt="search" />
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" value="submit" type="submit" id="button-addon2">Submit</button>
+                            <button class="btn btn-outline-dark bg-secondary text-white" value="submit" type="submit" id="search-btn">Search</button>
                         </div>
                     </div>
 
                     <% if(typeof message!= "undefined" && message) { %>
 
-                        <table class="table able-bordered">
+                        <table class="table able-bordered my-4 mt-5">
                             <thead class="thead-dark">
                                 <tr>
                                     <th scope="col">usn</th>
@@ -72,7 +74,7 @@
                                         <%= message.name %>
                                     </td>
                                     <td>
-                                        <%= message.assignment2 %>
+                                        <%= message.assignment1 %>
                                     </td>
                                     <td>
                                         <%= message.assignment2 %>
@@ -94,11 +96,13 @@
 
 
 
-                    <h3 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Update Assignment Marks</span></h3>
+                    <h2 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark mt-5 ">Update Assignment Marks</span></h2>
+
+                    <img style="width: 300px;" class="img-fluid mx-auto d-block mb-5" src="/img/update.svg" alt="banner" />
 
                     <div class="input-group mb-3 ">
                         <div class="input-group-prepend ">
-                            <span class="input-group-text " id="inputGroup-sizing-default ">Usn</i></span>
+                            <span class="input-group-text  bg-dark text-white" id="inputGroup-sizing-default ">Usn</span>
                         </div>
                         <input type="text " on class="form-control " placeholder="USN " id="usn " name="usnU " aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default " required>
                     </div>
@@ -106,21 +110,21 @@
 
                     <div class="input-group mb-3 ">
                         <div class="input-group-prepend ">
-                            <span class="input-group-text " id="inputGroup-sizing-default ">Assignment 1</i></span>
+                            <span class="input-group-text bg-dark text-white " id="inputGroup-sizing-default ">Assignment 1</span>
                         </div>
                         <input type="text " class="form-control " placeholder="  Assignment 1  " id="a1 " name="a1 " aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default ">
                     </div>
 
                     <div class="input-group mb-3 ">
                         <div class="input-group-prepend ">
-                            <span class="input-group-text " id="inputGroup-sizing-default ">Assignment 2</i></span>
+                            <span class="input-group-text bg-dark text-white " id="inputGroup-sizing-default ">Assignment 2</span>
                         </div>
                         <input type="text " class="form-control " placeholder="Assignment 2 " id="a2 " name="a2 " aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default ">
                     </div>
 
                     <div class="input-group mb-3 ">
                         <div class="input-group-prepend ">
-                            <span class="input-group-text " id="inputGroup-sizing-default ">Assignment 3</i></span>
+                            <span class="input-group-text bg-dark text-white " id="inputGroup-sizing-default ">Assignment 3</span>
                         </div>
                         <input type="text " class="form-control " placeholder="Assignment 3 " id="a3 " name="a3 " aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default ">
                     </div>
@@ -131,6 +135,13 @@
                     <button type="submit " value="Submit " class="btn btn-success rounded " style="width: 75%; margin-bottom: 1.9rem; ">Submit</button>
 
                 </form>
+                <% if(typeof result!= "undefined" && result) { %>
+                    <h4 class="alert alert-success">
+                        <%= result %>
+                    </h4>
+
+                    <% } %>
+
 
             </div>
 
