feat  delete usn

--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -142,6 +142,15 @@
 
                     <% } %>
 
+                        <form action="/auth/remove" method="POST">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" value="Delete Record" type="submit" id="button-addon2">Delete Record</button>
+                                </div>
+                            </div>
+                        </form>
+
 
             </div>
 
