--- a/views/student.ejs
+++ b/views/student.ejs
@@ -97,14 +97,14 @@
                             </tbody>
                         </table>
 
-                        <%} else { %>
-                            <h4 class="alert alert-danger mt-4">
-                                usn does not exist
-                            </h4>
-                            <% } %>
+                        <% } %>
+
 
 
                 </form>
+                <%   if(typeof isError!= "undefined" && isError ) { %>
+                    <img style="width: 400px;" class="img-fluid mx-auto d-block mb-5" src="/img/error404.svg" alt="error 404" />
+                    <% } %>
 
 
 
